Transpile TypeScript code
Use Babel TypeScript preset to process TypeScript syntax.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "npm run clean && babel src -d lib",
+    "build": "npm run clean && babel src -d lib --extensions '.js,.ts'",
     "clean": "rimraf lib/*"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.7"
   }
 }
