--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"noUnusedParameters": true,
 		"pretty": true,
 		"skipLibCheck": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"strictNullChecks": true
 	},
 	"include": ["src"]
 }
