Enable checkJs flag to report errors in .js files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"baseUrl": "./",
+		"checkJs": true,
 		"rootDir": "./",
 		"module": "es2015",
 		"noEmit": true,
