--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,13 @@
 		"rootDir": "./",
 		"module": "es2015",
 		"noEmit": true,
-		"noImplicitAny": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"pretty": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strictNullChecks": true
+		"strict": true
 	},
 	"include": ["src"]
 }
