--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"rootDir": "./",
 		"module": "es2015",
+		"moduleResolution": "node",
 		"noEmit": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
