Enable esModuleInterop flag
Remove allowSyntheticDefaultImports flag since it's a subset of the
esModuleInterop flag.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
-		"allowSyntheticDefaultImports": true,
 		"baseUrl": "./",
 		"checkJs": true,
+		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"rootDir": "./",
 		"module": "es2015",
