Skip ESLint rules that overlap with Prettier
Disable ESLint rules related to code formatting.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,9 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended"
+		"plugin:@typescript-eslint/recommended",
+		"prettier",
+		"prettier/@typescript-eslint"
 	],
 	"parserOptions": {
 		"ecmaVersion": 2018
