--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"parser": "@typescript-eslint/parser",
 	"extends": [
-		"eslint:recommended",
+		"airbnb-base",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
 		"prettier",
