--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,5 +9,27 @@
 	],
 	"parserOptions": {
 		"ecmaVersion": 2018
+	},
+	"rules": {
+		"import/extensions": [
+			"error",
+			{
+				"ts": "never"
+			}
+		],
+		"import/no-extraneous-dependencies": [
+			"error",
+			{
+				"devDependencies": ["**/*.spec.{js,ts}", "**/jest.config.js"]
+			}
+		]
+	},
+	"settings": {
+		"import/parsers": {
+			"@typescript-eslint/parser": [".ts"]
+		},
+		"import/resolver": {
+			"typescript": {}
+		}
 	}
 }
