--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
