--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "npm run clean && babel src -d lib --extensions '.js,.ts'",
+    "build": "npm run clean && babel src -d lib --extensions '.js,.ts' --ignore '**/*.spec.js','**/*.spec.ts'",
     "clean": "rimraf lib/*",
     "lint": "tsc && eslint . --ext .js,.ts --report-unused-disable-directives",
     "test": "jest"
