--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
 	"parser": "@typescript-eslint/parser",
 	"extends": [
 		"airbnb-base",
+		"plugin:jest/recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
 		"prettier",
