--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm run clean && babel src -d lib --extensions '.js,.ts' --ignore '**/*.spec.js','**/*.spec.ts'",
     "clean": "rimraf lib/*",
     "lint": "tsc && eslint . --ext .js,.ts --report-unused-disable-directives",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
