--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,4 +35,8 @@ jobs:
     - run: yarn run lint
     - run: yarn run build
     - run: yarn test
-    - run: yarn run codecov
+
+    - name: Upload test coverage report to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        fail_ci_if_error: true
