--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,15 @@
 		"allowJs": true,
 		"baseUrl": "./",
 		"checkJs": true,
+		"declaration": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"rootDir": "./",
 		"module": "es2015",
 		"moduleResolution": "node",
-		"noEmit": true,
 		"noImplicitReturns": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
+		"outDir": "./lib",
 		"pretty": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
