--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -32,7 +32,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: yarn --frozen-lockfile
       - run: yarn run lint
-      - run: yarn run build
+      - run: yarn run build && yarn run build-types
       - run: yarn test
 
       - name: Upload test coverage report to Codecov
