--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "npm run clean && babel src -d lib --extensions '.js,.ts' --ignore '**/*.spec.js','**/*.spec.ts'",
+    "build": "babel src -d lib --extensions '.js,.ts' --ignore '**/*.spec.js','**/*.spec.ts' --delete-dir-on-start",
     "build-types": "tsc --emitDeclarationOnly",
-    "clean": "rimraf lib/*",
     "lint": "tsc --noEmit && eslint . --ext .js,.ts --report-unused-disable-directives",
     "test": "jest --coverage"
   },
@@ -32,7 +31,6 @@
     "eslint-plugin-jest": "^23.18.0",
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
-    "rimraf": "^3.0.2",
     "ts-jest": "^26.5.6",
     "typescript": "^3.9.9"
   }
