--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 		"prettier/@typescript-eslint"
 	],
 	"parserOptions": {
-		"ecmaVersion": 2018
+		"ecmaVersion": 2018,
+		"project": ["./**/tsconfig.json", "./**/tsconfig.test.json"]
 	},
 	"rules": {
 		"import/extensions": [
