--- a/package.json
+++ b/package.json
@@ -10,19 +10,14 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "babel src -d lib --extensions '.js,.ts' --ignore '**/*.spec.js','**/*.spec.ts' --delete-dir-on-start",
-    "build-types": "tsc --emitDeclarationOnly",
-    "lint": "tsc --noEmit && eslint . --ext .js,.ts --report-unused-disable-directives",
+    "build": "tsc -b --clean && tsc -b",
+    "lint": "tsc -b && eslint . --report-unused-disable-directives",
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.2",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.5",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.11.0",
@@ -32,6 +27,6 @@
     "jest": "^26.6.3",
     "prettier": "^2.0.5",
     "ts-jest": "^26.5.6",
-    "typescript": "^3.9.9"
+    "typescript": "^4.2.4"
   }
 }
