Add basic demo built by Webpack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
 	},
 	"files": [],
 	"references": [
+		{ "path": "./demo" },
 		{ "path": "./src" },
 		{ "path": "./src/tsconfig.test.json" }
 	]
