--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "tsc -b --clean && tsc -b",
+    "build": "run-s build:*",
+    "build:src": "tsc -b --clean && tsc -b",
+    "build:demo": "wp --config demo/webpack.config.js",
     "lint": "tsc -b && eslint . --report-unused-disable-directives",
+    "start": "npm run build:demo && npx http-server ./demo/lib/ -c-1 -p 80",
     "test": "jest --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.5",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.11.0",
@@ -25,8 +30,12 @@
     "eslint-plugin-import": "^2.23.0",
     "eslint-plugin-jest": "^23.18.0",
     "jest": "^26.6.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.2.4"
+    "ts-loader": "^9.2.1",
+    "typescript": "^4.2.4",
+    "webpack": "^5.37.1",
+    "webpack-nano": "^1.1.1"
   }
 }
