Remove reference to deprecated Prettier config
Per https://github.com/prettier/eslint-config-prettier/blob/main/CHANGELOG.md#version-800-2021-02-21
the "prettier" config encompasses all the variations.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
 		"plugin:jest/recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
 		"plugin:@typescript-eslint/recommended",
-		"prettier",
-		"prettier/@typescript-eslint"
+		"prettier"
 	],
 	"parserOptions": {
 		"ecmaVersion": 2018,
