--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "workspaces": [
-    "demo",
-    "packages/*"
+    "packages/*",
+    "demo"
   ],
   "scripts": {
     "build": "yarn workspaces run build",
