--- a/packages/package-name/tsconfig.json
+++ b/packages/package-name/tsconfig.json
@@ -7,5 +7,5 @@
 	},
 	"extends": "../../tsconfig.json",
 	"exclude": ["**/*.spec.ts", "**/*.config.js"],
-	"include": ["src/**/*"]
+	"include": ["src"]
 }
