--- a/packages/package-name/tsconfig.json
+++ b/packages/package-name/tsconfig.json
@@ -3,9 +3,9 @@
 		"lib": ["es5"],
 		"outDir": "lib",
 		"rootDir": "src",
-		"tsBuildInfoFile": "lib/tsconfig.tsbuildinfo",
+		"tsBuildInfoFile": "lib/tsconfig.tsbuildinfo"
 	},
 	"extends": "../../tsconfig.json",
 	"exclude": ["**/*.spec.ts", "**/*.config.js"],
-	"include": ["src"],
+	"include": ["src"]
 }
